--- a/web-assets/css/styles.css
+++ b/web-assets/css/styles.css
@@ -245,6 +245,86 @@ select::-ms-expand {
   margin-bottom: 0;
 }
 
+/** Start: Confirmation Card  **/
+.confirmation-card.center-align-card {
+ background-color: #C8C9CC;
+}
+
+.confirmation-card a,
+.confirmation-card a:active,
+.confirmation-card a:visited {
+  text-decoration: underline;
+}
+
+.confirmation-card.center-align-card .page-content {
+  box-shadow: none;
+}
+
+.confirmation-card.center-align-card .page-content .page-main {
+  padding: 0px 50px 55px;
+  position: relative;
+  text-align: center;
+}
+
+.confirmation-card .header {
+  padding: 27px 10px 21px 10px;
+  background-color: transparent;
+}
+.confirmation-card .header .logo-link img {
+
+}
+
+.confirmation-card.center-align-card .page-content .page-main .page-title-heading {
+  color: #2A2A2A;
+  font-family: "Barlow Condensed";
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 38px;
+  text-align: center;
+}
+.confirmation-card.center-align-card .page-content .page-main .page-description {
+  margin-top: 41px;
+  text-align: left;
+  font-weight: normal;
+  font-family: "Roboto";
+  font-size: 15px;
+}
+.confirmation-card.center-align-card .page-content .page-main .page-description ol {
+  counter-reset: counter;
+  list-style: none;
+}
+
+.confirmation-card.center-align-card .page-content .page-main .page-description ol li{
+  margin: 0;
+  line-height: 21px;
+  counter-increment: counter;
+  position: relative;
+}
+
+.confirmation-card.center-align-card .page-content .page-main .page-description ol li:not(:last-child){
+  padding-bottom: 28px;
+}
+
+.confirmation-card.center-align-card .page-content .page-main .page-description ol li::before {
+  content: counter(counter);
+  color: #FFFFFF;
+  font-family: Roboto;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  position: absolute;
+  --size: 30px;
+  left: calc(-1 * var(--size) - 10px);
+  line-height: var(--size);
+  top: -4px;
+  background-image: linear-gradient(125.57deg, #2C95D7 0%, #83C5EE 100%);
+  border-radius: 100%;
+  width: 30px;
+  height: 28px;
+  text-align: center;
+}
+/** End: Confirmation Card  **/
+
 /** Start : Input/select box - field area style **/
 .input-field {
   position: relative;
