Separate business signin / signup images

--- a/web-assets/auth0/css/custom.css
+++ b/web-assets/auth0/css/custom.css
@@ -342,8 +342,12 @@ div.auth0-lock-error::before{
     background-position: top right;
 }
 
-.business-column {
-    background-image: url(https://tc-public-static-files.topcoder.com/topcoder-auth/images/business_bg.png)
+.business-signin {
+    background-image: url(https://tc-public-static-files.{{DOMAIN}}/topcoder-auth/images/business_bg.png)
+}
+
+.business-signup {
+    background-image: url(https://tc-public-static-files.{{DOMAIN}}/topcoder-auth/images/business_bg.png)
 }
 
 .member-signin {
