--- a/web-assets/auth0/css/custom.css
+++ b/web-assets/auth0/css/custom.css
@@ -351,11 +351,11 @@ div.auth0-lock-error::before{
 }
 
 .member-signin {
-    background-image: url(https://tc-public-static-files.topcoder.com/topcoder-auth/images/member-signin.png);
+    background-image: url(https://tc-public-static-files.{{DOMAIN}}/topcoder-auth/images/member-signin.png);
 }
 
 .member-signup {
-    background-image: url(https://tc-public-static-files.topcoder.com/topcoder-auth/images/member-signup.png);
+    background-image: url(https://tc-public-static-files.{{DOMAIN}}/topcoder-auth/images/member-signup.png);
 }
 
 #member-signin-container, #member-signup-container, #business-signin-container, #business-signup-container {
