--- a/web-assets/auth0/css/custom.css
+++ b/web-assets/auth0/css/custom.css
@@ -375,9 +375,14 @@ div.auth0-lock-error::before{
     -moz-text-fill-color: transparent;
 }
 
-#member-signup-container .title{
-    font-size: 34px;
-    text-align: left;
+#member-signup-container .title {
+    font-size: 48px;
+    line-height: 50px;
+    background: linear-gradient(90deg, #FFC43D, #F37593);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
 }
 
 #business-signin-container .title, #business-signup-container .title{
@@ -416,8 +421,7 @@ div.auth0-lock-error::before{
 }
 
 #member-signup-container {
-    padding-top: 81px;
-    padding-left: 634px;
+    padding-top: 53px;
 }
 
 #member-signup-container .body {
