--- a/web-assets/css/check_email.css
+++ b/web-assets/css/check_email.css
@@ -7,7 +7,7 @@ body {
     background-color: #f6f6f6;
     margin: 0;
     padding: 0;
-    font-family: "Roboto";
+    font-family: "Roboto", sans-serif;
     margin-top: 6%;
 }
 
